Added some new functionalities and styles

--- a/index.html
+++ b/index.html
@@ -20,26 +20,29 @@
         </div>
     </div>
 
-    <!-- Contenedor de la página de inicio -->
-    <div id="startScreen"></div>
-    
-    <!-- Contenedor del cuestionario -->
-    <div class="mainPort" style="display: none;">
-        <div id="decoration"></div>
-        <div id="navigation">
-            <div id="breadcrumb"></div>
-            <div id="navigationIndicator"></div>
+    <div class="mainContent">
+        <!-- Contenedor de la página de inicio -->
+        <div id="startScreen"></div>
+        
+        <!-- Contenedor del cuestionario -->
+        <div class="mainPort" style="display: none;">
+            <div id="decoration"></div>
+            <div id="navigation">
+                <div id="breadcrumb"></div>
+                <div id="navigationIndicator"></div>
+            </div>
+            <div id="questions">
+                <span id="questionsTag">質問</span>
+            </div>
+            <div id="answers"></div>
+            <div id="nextQuestion"></div>
         </div>
-        <div id="questions">
-            <span id="questionsTag">質問</span>
-        </div>
-        <div id="answers"></div>
-        <div id="nextQuestion"></div>
     </div>
+
     <div class="foot">
         <p id="footer">
             Sergio Andrés Cruz Romero ©
-            <br> Version Alpha
+            <br> Version Alpha 0.0.1
             <br> 2024
         </p>
     </div>
